<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.transaction.TransactionActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_konfirmasi"
        style="@style/title_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_konfirmasi_transfer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/cardview_balance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_konfirmasi">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_name_receiver"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:text="@string/penerima"
                android:textColor="#777777"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_receiver"
                style="@style/description_bold"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_name_receiver" />

            <TextView
                android:id="@+id/label_nominal_transfer"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/nominal_transfer"
                android:textColor="#777777"
                app:layout_constraintLeft_toLeftOf="@id/label_name_receiver"
                app:layout_constraintTop_toBottomOf="@id/label_name_receiver"/>

            <TextView
                android:id="@+id/nominal_transfer"
                style="@style/description_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/name_receiver"
                app:layout_constraintTop_toTopOf="@id/label_nominal_transfer"/>

            <TextView
                android:id="@+id/label_tujuan_transaksi"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tujuan_transaksi"
                android:textColor="#777777"
                app:layout_constraintLeft_toLeftOf="@id/label_nominal_transfer"
                app:layout_constraintTop_toBottomOf="@id/label_nominal_transfer"/>

            <TextView
                android:id="@+id/tujuan_transaksi"
                style="@style/description_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lainnya"
                app:layout_constraintRight_toRightOf="@id/nominal_transfer"
                app:layout_constraintTop_toTopOf="@id/label_tujuan_transaksi"/>

            <TextView
                android:id="@+id/label_bank_tujuan"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/bank_tujuan"
                android:textColor="#777777"
                app:layout_constraintLeft_toLeftOf="@id/label_tujuan_transaksi"
                app:layout_constraintTop_toBottomOf="@id/label_tujuan_transaksi"/>

            <TextView
                android:id="@+id/bank_tujuan"
                style="@style/description_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/tujuan_transaksi"
                app:layout_constraintTop_toTopOf="@id/label_bank_tujuan"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_tujuan_transaksi"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_transaction">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_balance"
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/my_balance"
                android:textColor="#777777"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/balance"
                style="@style/description_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@id/label_balance"
                app:layout_constraintTop_toBottomOf="@id/label_balance"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balance"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_balance">

        <TextView
            android:id="@+id/tv_detail"
            style="@style/description_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/lanjut_transfer"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>